# minus

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  flake.nix  log  rust-toolchain-nightly.toml  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
examples/: basic.rs  color-output.rs  dyn_async_std.rs  dyn_tokio.rs  large_lines.rs  less-rs.rs  log_async_std.rs  msg-tokio.rs  static-no-overflow.rs  static.rs  static_long.rs  tokio-no-overflow.rs
src/: async_pager.rs  data_store.rs  dynamic_pager.rs  error.rs  events.rs  hooks.rs  init.rs  input.rs  lib.rs  line.rs  pager.rs  rt_wrappers.rs  screen.rs  search.rs  state.rs  static_pager.rs  tests.rs  threads_pager.rs  utils.rs
src/core/: commands.rs  data.rs  ev_handler.rs  events.rs  hooks.rs  init.rs  mod.rs  reader.rs  screen_line.rs  search.rs  term.rs
src/core/display/: mod.rs  tests.rs
src/core/utils/: mod.rs  term.rs  text.rs
src/core/utils/display/: mod.rs  tests.rs
src/input/: event_wrapper.rs  hashed_event_register.rs  keyevent.rs  mod.rs  reader.rs  tests.rs
src/input/definitions/: keydefs.rs  mod.rs  mousedefs.rs
src/input/input-parser/: mod.rs
src/rt_wrappers/: async_std_wrapper.rs  mod.rs  tokio_wrapper.rs
src/screen/: data_source.rs  mod.rs  tests.rs
src/utils/: ev_handler.rs  mod.rs  term.rs  tests.rs
