[package]
name = "minus"
version = "5.0.0"
authors = ["Arijit Dey <arijid79@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/minus"
repository = "https://github.com/arijit79/minus"
description = "An asynchronous paging library for Rust"
keywords = ["pager", "asynchronous", "dynamic", "less", "more"]
categories = ["Text processing", "Command-line interface", "Asynchronous"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
crossterm = "0.22.1"
textwrap = { version = "~0.13", default-features = false, features = ["unicode-width"] }
thiserror = "^1"
regex = { version = ">=1.5.5", optional = true }
crossbeam-channel = "0.5.1"
once_cell = "1.9.0"

[features]
search = [ "regex" ]
static_output = []
dynamic_output = []

[dev-dependencies]
futures-lite = { version = "^1" }
tokio = { version = "^1.0", features = ["rt", "macros", "rt-multi-thread", "time"] }

[[example]]
name = "dyn_tokio"
required-features = ["dynamic_output"]

[[example]]
name = "less-rs"
required-features = ["dynamic_output"]

[[example]]
name = "static"
required-features = ["static_output"]

[[example]]
name = "large_lines"
required-features = ["static_output"]

[[example]]
name = "color-output"
required-features = ["static_output"]

[[example]]
name = "static-no-overflow"
required-features = ["static_output"]

[[example]]
name = "msg-tokio"
required-features = ["dynamic_output"]
